# CP_Contests

./: CMakeLists.txt  README.md
cpp/Codeforces/: Makefile
cpp/Codeforces/1-50/: 1A_Theatre_Square.cc  1B_Spreadsheets.cc  25A_IQ_test.cc  37A_Towers.cc  38A_Army.cc  41A_Translation.cc  4A_Watermelon.cc  4C_Registration_system.cc  50A_Domino_piling.cc  Makefile
cpp/Codeforces/101-150/: 110A_Nearly_Lucky_Number.cc  112A_Petya_and_Strings.cc  114A_Cifera.cc  116A_Tram.cc  118A_String_Task.cc  118B_Present_from_Lena.cc  119A_Epic_Game.cc  122A_Lucky_Division.cc  124A_The_number_of_positions.cc  129A_Cookies.cc  131A_Caps_Lock.cc  133A_HQ9+.cc  136A_Presents.cc  139A_Petr_and_Book.cc  141A_Amusing_Joke.cc  144A_Arrival_of_the_General.cc  146A_Lucky_Ticket.cc  148A_Insomnia_cure.cc  149A_Business_trip.cc  stdin
cpp/Codeforces/151-200/: 151A_Soft_Drinking.cc  152A_Marks.cc  155A_I_love_username.cc  158A_Next_Round.cc  158B_Taxi.cc  158C_Cd_and_pwd.cc  158D_Ice_Sculptures.cc  160A_Twins.cc  160B_Unlucky_Ticket.cc  165A_Supercentral_Point.cc  168A_Wizards_and_Demonstration.cc  189A_Cut_Ribbon.cc  200B_Drinks.cc  Makefile  stdin
cpp/Codeforces/201-250/: 208A_Dubstep.cc  214A_System_of_Equations.cc  219A_k-String.cc  224A_Parallelepiped.cc  228A_Is_your_horseshoe.cc  230A_Dragons.cc  230B_T-primes.cc  231A_Team.cc  233A_Perfect_Permutation.cc  236A_Boy_or_Girl.cc  237A_Free_Cash.cc  246A_Buggy_Sorting.cc
cpp/Codeforces/251-300/: 255A_Greg_Workout.cc  258A_Little_Elephant_and_Bits.cc  262A_Roma_and_Lucky_Numbers.cc  263A_Beautiful_Matrix.cc  263B_Squares.cc  265A_Colorful_Stones.cc  266A_Stones_on_the_Table.cc  266B_Queue_at_the_School.cc  268A_Games.cc  268B_Buttons.cc  270A_Fancy_Fence.cc  271A_Beautiful_Year.cc  272A_Dima_and_Friends.cc  275A_Lights_Out.cc  276A_Lunch_Rush.cc  278A_Circle_Line.cc  281A_Word_Capitalization.cc  282A_Bit++.cc  285A_Slightly_Decreasing_Permutations.cc  291A_Spyke_Talks.cc  294A_Shaass_and_Oskols.cc  300A_Array.cc  stdin
cpp/Codeforces/301-350/: 313A_Ilya_and_Bank_Account.cc  313B_Ilya_and_Queries.cc  318A_Even_Odds.cc  320A_Magic_Numbers.cc  322A_Ciel_and_Dancing.cc  327A_Flipping_Game.cc  327B_Hungry_Sequence.cc  330A_Cakeminator.cc  334A_Candy_Bags.cc  336A_Vasily_the_Bear.cc  337A_Puzzles.cc  339A_Helpful_Maths.cc  339B_Xenia_and_Ringroad.cc  340A_The_Wall.cc  344A_Magnets.cc  349A_Cinema_Line.cc  350A_TL.cc  stdin
cpp/Codeforces/351-400/: 352A_Jeff_and_Digits.cc  353A_Domino.cc  363B_Fence.cc  368B_Sereja_and_Suffixes.cc  369A_Valera_and_Plates.cc  378A_Playing_with_Dice.cc  379A_New_Year_Candles.cc  379B_New_Year_Present.cc  381A_Sereja_and_Dima.cc  382A_Ksenia_and_Pan_Scales.cc  384A_Coder.cc  385A_Bear_and_Raspberry.cc  387A_George_and_Sleep.cc  389A_Fox_and_Number_Game.cc  stdin
cpp/Codeforces/401-450/: 401A_Vanya_and_Cards.cc  404A_Valera_and_X.cc  405A_Gravity_Flip.cc  415A_Mashmokh_and_Lights.cc  427A_Police_Recruits.cc  427B_Prison_Transfer.cc  431A_Black_Square.cc  432A_Choosing_Teams.cc  435A_Queue_on_Bus_Stop.cc  439A_Devu_Churu.cc  439B_Devu_the_Dumb_Guy.cc  441A_Valera_and_Antique_Items.cc  443A_Anton_and_Letters.cc  447A_DZY_Loves_Hash.cc  448A_Rewards.cc  450A_Jzzhu_and_Children.cc  stdin
cpp/Codeforces/451-500/: 451A_Game_With_Sticks.cc  451B_Sort_the_Array.cc  454A_Little_Pony.cc  455A_Boredom.cc  456A_Laptops.cc  456B_Fedya_and_Maths.cc  459A_Pashmak_and_Garden.cc  459B_Pashmak_and_Flowers.cc  460A_Vasya_and_Socks.cc  460B_Little_Dima_and_Equation.cc  461A_Appleman_and_Toastman.cc  462A_Appleman_and_Easy_Task.cc  462B_Appleman_and_Card_Game.cc  463A_Caisa_and_Sugar.cc  463B_Caisa_and_Pylons.cc  465A_inc_ARG.cc  465B_Inbox.cc  466A_Cheap_Travel.cc  467A_George_and_Accommodation.cc  467B_Fedor_and_New_Game.cc  469A_I_Wanna_Be_the_Guy.cc  471A_MUH_and_Sticks.cc  472A_Learn_from_Math.cc  472B_Design_Tutorial.cc  472C_Design_Tutorial.cc  474A_Keyboard.cc  474B_Worms.cc  476A_Dreamoon_and_Stairs.cc  478A_Initial_Bet.cc  478B_Random_Teams.cc  479A_Expression.cc  479C_Exams.cc  482A_Diverse_Permutation.cc  483A_Counterexample.cc  486A_Calculating_Function.cc  489A_SwapSort.cc  489B_BerSU_Ball.cc  489C_Given_Length_and_Sum_of_Digits.cc  490A_Team_Olympiad.cc  492A_Vanya_and_Cubes.cc  (+7 more)
cpp/Codeforces/501-550/: 501A_Contest.cc  501B_Misha_and_Changing_Handles.cc  505A_Kitayuta_Gift.cc  505C_Kitayuta_Treasure.cc  507A_Amr_and_Music.cc  507B_Amr_and_Pins.cc  507C_Guess_Your_Way_Out.cc  507D_The_Maths_Lecture.cc  508A_Pasha_and_Pixels.cc  508B_Anton_and_Currency.cc  509A_Maximum_in_Table.cc  510A_Fox_And_Snake.cc  513A_Game.cc  514A_Chewbacca_and_Number.cc  515A_Drazil_and_Date.cc  519A_A_and_B_and_Chess.cc  519B_A_and_B_and_Compilation_Errors.cc  520A_Pangram.cc  520B_Two_Buttons.cc  527A_Playing_with_Paper.cc  540A_Combination_Lock.cc  546A_Soldier_and_Bananas.cc  550A_Two_Substrings.cc  stdin
cpp/Codeforces/51-100/: 58A_Chat_room.cc  59A_Word.cc  61A_Ultra-Fast_Mathematician.cc  69A_Young_Physicist.cc  71A_Way_Too_Long_Words.cc  82A_Double_Cola.cc  84A_Toy_Army.cc  92A_Chips.cc  96A_Football.cc  stdin
cpp/Codeforces/551-600/: 551A_GukiZ_and_Contest.cc  556A_Case_of_Zeroes_and_Ones.cc  560A_Currency_System_in_Geraldion.cc  567A_Lineland_Mail.cc  570A_Elections.cc  577A_Multiplication_Table.cc  579A_Raising_Bacteria.cc  580A_Kefa_and_First_Steps.cc  581A_Vasya_the_Hipster.cc  584A_Olesya_and_Rodion.cc  588A_Duff_and_Meat.cc  599A_Patrick_and_Shopping.cc  stdin
cpp/Codeforces/601-650/: 615A_Bulbs.cc  617A_Elephant.cc  621A_Wet_Shark.cc  630A_Again_Twenty_Five.cc  stdin
cpp/Codeforces/651-700/: 651A_Joysticks.cc  659A_Round_House.cc  677A_Vanya_and_Fence.cc  686A_Free_Ice_Cream.cc  688B_Lovely_Palindromes.cc  stdin
cpp/Codeforces/701-750/: 701A_Cards.cc  703A_Mishka_and_Game.cc  705_Hulk.cc  706B_Interesting_Drink.cc  707A_Brain_Photos.cc  711A_Bus_to_Udayland.cc  716A_Crazy_Computer.cc  721A_Japanese_Crosswords.cc  (+10 more)
cpp/HackerRank/: TwitterCodingChallengeCollege_2019.cpp
cpp/Samples/: BinarySearchTree  BinarySearchTree.c  DivideCoins.java  FindMissingNumber  FindMissingNumber.c  TryGetOpt  TryGetOpt.cc  ins  ins.c  memcpy.c
(+17 files in other folders)
