cmake_minimum_required( VERSION 3.13 )
project( CP_Contests_Solutions )

set( CMAKE_CXX_STANDARD 17 )

#add_executable( CP_Contests_Solutions
#        cpp/Codeforces/1-50/1A_Theatre_Square.cc
#        cpp/Codeforces/1-50/1B_Spreadsheets.cc
#        cpp/Codeforces/1-50/25A_IQ_test.cc
#        cpp/Codeforces/1-50/37A_Towers.cc
#        cpp/Codeforces/1-50/38A_Army.cc
#        cpp/Codeforces/1-50/41A_Translation.cc
#        cpp/Codeforces/1-50/4A_Watermelon.cc
#        cpp/Codeforces/1-50/4C_Registration_system.cc
#        cpp/Codeforces/1-50/50A_Domino_piling.cc
#        cpp/Codeforces/1-50/Makefile
#        cpp/Codeforces/1-50/stdin
#        cpp/Codeforces/101-150/110A_Nearly_Lucky_Number.cc
#        cpp/Codeforces/101-150/112A_Petya_and_Strings.cc
#        cpp/Codeforces/101-150/114A_Cifera.cc
#        cpp/Codeforces/101-150/116A_Tram.cc
#        cpp/Codeforces/101-150/118A_String_Task.cc
#        cpp/Codeforces/101-150/118B_Present_from_Lena.cc
#        cpp/Codeforces/101-150/119A_Epic_Game.cc
#        cpp/Codeforces/101-150/122A_Lucky_Division.cc
#        cpp/Codeforces/101-150/124A_The_number_of_positions.cc
#        cpp/Codeforces/101-150/129A_Cookies.cc
#        cpp/Codeforces/101-150/131A_Caps_Lock.cc
#        cpp/Codeforces/101-150/133A_HQ9+.cc
#        cpp/Codeforces/101-150/136A_Presents.cc
#        cpp/Codeforces/101-150/139A_Petr_and_Book.cc
#        cpp/Codeforces/101-150/141A_Amusing_Joke.cc
#        cpp/Codeforces/101-150/144A_Arrival_of_the_General.cc
#        cpp/Codeforces/101-150/146A_Lucky_Ticket.cc
#        cpp/Codeforces/101-150/148A_Insomnia_cure.cc
#        cpp/Codeforces/101-150/149A_Business_trip.cc
#        cpp/Codeforces/101-150/Makefile
#        cpp/Codeforces/101-150/stdin
#        cpp/Codeforces/151-200/151A_Soft_Drinking.cc
#        cpp/Codeforces/151-200/152A_Marks.cc
#        cpp/Codeforces/151-200/155A_I_love_username.cc
#        cpp/Codeforces/151-200/158A_Next_Round.cc
#        cpp/Codeforces/151-200/158B_Taxi.cc
#        cpp/Codeforces/151-200/158C_Cd_and_pwd.cc
#        cpp/Codeforces/151-200/158D_Ice_Sculptures.cc
#        cpp/Codeforces/151-200/160A_Twins.cc
#        cpp/Codeforces/151-200/160B_Unlucky_Ticket.cc
#        cpp/Codeforces/151-200/165A_Supercentral_Point.cc
#        cpp/Codeforces/151-200/168A_Wizards_and_Demonstration.cc
#        cpp/Codeforces/151-200/189A_Cut_Ribbon.cc
#        cpp/Codeforces/151-200/200B_Drinks.cc
#        cpp/Codeforces/151-200/Makefile
#        cpp/Codeforces/151-200/stdin
#        cpp/Codeforces/201-250/bin/230A_Dragons.dSYM/Contents/Resources/DWARF/230A_Dragons
#        cpp/Codeforces/201-250/bin/230A_Dragons.dSYM/Contents/Info.plist
#        cpp/Codeforces/201-250/bin/230A_Dragons
#        cpp/Codeforces/201-250/208A_Dubstep.cc
#        cpp/Codeforces/201-250/214A_System_of_Equations.cc
#        cpp/Codeforces/201-250/219A_k-String.cc
#        cpp/Codeforces/201-250/224A_Parallelepiped.cc
#        cpp/Codeforces/201-250/228A_Is_your_horseshoe.cc
#        cpp/Codeforces/201-250/230A_Dragons.cc
#        cpp/Codeforces/201-250/230B_T-primes.cc
#        cpp/Codeforces/201-250/231A_Team.cc
#        cpp/Codeforces/201-250/233A_Perfect_Permutation.cc
#        cpp/Codeforces/201-250/236A_Boy_or_Girl.cc
#        cpp/Codeforces/201-250/237A_Free_Cash.cc
#        cpp/Codeforces/201-250/246A_Buggy_Sorting.cc
#        cpp/Codeforces/201-250/Makefile
#        cpp/Codeforces/201-250/stdin
#        cpp/Codeforces/251-300/255A_Greg_Workout.cc
#        cpp/Codeforces/251-300/258A_Little_Elephant_and_Bits.cc
#        cpp/Codeforces/251-300/262A_Roma_and_Lucky_Numbers.cc
#        cpp/Codeforces/251-300/263A_Beautiful_Matrix.cc
#        cpp/Codeforces/251-300/263B_Squares.cc
#        cpp/Codeforces/251-300/265A_Colorful_Stones.cc
#        cpp/Codeforces/251-300/266A_Stones_on_the_Table.cc
#        cpp/Codeforces/251-300/266B_Queue_at_the_School.cc
#        cpp/Codeforces/251-300/268A_Games.cc
#        cpp/Codeforces/251-300/268B_Buttons.cc
#        cpp/Codeforces/251-300/270A_Fancy_Fence.cc
#        cpp/Codeforces/251-300/271A_Beautiful_Year.cc
#        cpp/Codeforces/251-300/272A_Dima_and_Friends.cc
#        cpp/Codeforces/251-300/275A_Lights_Out.cc
#        cpp/Codeforces/251-300/276A_Lunch_Rush.cc
#        cpp/Codeforces/251-300/278A_Circle_Line.cc
#        cpp/Codeforces/251-300/281A_Word_Capitalization.cc
#        cpp/Codeforces/251-300/282A_Bit++.cc
#        cpp/Codeforces/251-300/285A_Slightly_Decreasing_Permutations.cc
#        cpp/Codeforces/251-300/291A_Spyke_Talks.cc
#        cpp/Codeforces/251-300/294A_Shaass_and_Oskols.cc
#        cpp/Codeforces/251-300/300A_Array.cc
#        cpp/Codeforces/251-300/Makefile
#        cpp/Codeforces/251-300/stdin
#        cpp/Codeforces/301-350/313A_Ilya_and_Bank_Account.cc
#        cpp/Codeforces/301-350/313B_Ilya_and_Queries.cc
#        cpp/Codeforces/301-350/318A_Even_Odds.cc
#        cpp/Codeforces/301-350/320A_Magic_Numbers.cc
#        cpp/Codeforces/301-350/322A_Ciel_and_Dancing.cc
#        cpp/Codeforces/301-350/327A_Flipping_Game.cc
#        cpp/Codeforces/301-350/327B_Hungry_Sequence.cc
#        cpp/Codeforces/301-350/330A_Cakeminator.cc
#        cpp/Codeforces/301-350/334A_Candy_Bags.cc
#        cpp/Codeforces/301-350/336A_Vasily_the_Bear.cc
#        cpp/Codeforces/301-350/337A_Puzzles.cc
#        cpp/Codeforces/301-350/339A_Helpful_Maths.cc
#        cpp/Codeforces/301-350/339B_Xenia_and_Ringroad.cc
#        cpp/Codeforces/301-350/340A_The_Wall.cc
#        cpp/Codeforces/301-350/344A_Magnets.cc
#        cpp/Codeforces/301-350/349A_Cinema_Line.cc
#        cpp/Codeforces/301-350/350A_TL.cc
#        cpp/Codeforces/301-350/Makefile
#        cpp/Codeforces/301-350/stdin
#        cpp/Codeforces/351-400/bin/363B_Fence.dSYM/Contents/Resources/DWARF/363B_Fence
#        cpp/Codeforces/351-400/bin/363B_Fence.dSYM/Contents/Info.plist
#        cpp/Codeforces/351-400/bin/363B_Fence
#        cpp/Codeforces/351-400/352A_Jeff_and_Digits.cc
#        cpp/Codeforces/351-400/353A_Domino.cc
#        cpp/Codeforces/351-400/363B_Fence.cc
#        cpp/Codeforces/351-400/368B_Sereja_and_Suffixes.cc
#        cpp/Codeforces/351-400/369A_Valera_and_Plates.cc
#        cpp/Codeforces/351-400/378A_Playing_with_Dice.cc
#        cpp/Codeforces/351-400/379A_New_Year_Candles.cc
#        cpp/Codeforces/351-400/379B_New_Year_Present.cc
#        cpp/Codeforces/351-400/381A_Sereja_and_Dima.cc
#        cpp/Codeforces/351-400/382A_Ksenia_and_Pan_Scales.cc
#        cpp/Codeforces/351-400/384A_Coder.cc
#        cpp/Codeforces/351-400/385A_Bear_and_Raspberry.cc
#        cpp/Codeforces/351-400/387A_George_and_Sleep.cc
#        cpp/Codeforces/351-400/389A_Fox_and_Number_Game.cc
#        cpp/Codeforces/351-400/Makefile
#        cpp/Codeforces/351-400/stdin
#        cpp/Codeforces/401-450/401A_Vanya_and_Cards.cc
#        cpp/Codeforces/401-450/404A_Valera_and_X.cc
#        cpp/Codeforces/401-450/405A_Gravity_Flip.cc
#        cpp/Codeforces/401-450/415A_Mashmokh_and_Lights.cc
#        cpp/Codeforces/401-450/427A_Police_Recruits.cc
#        cpp/Codeforces/401-450/427B_Prison_Transfer.cc
#        cpp/Codeforces/401-450/431A_Black_Square.cc
#        cpp/Codeforces/401-450/432A_Choosing_Teams.cc
#        cpp/Codeforces/401-450/435A_Queue_on_Bus_Stop.cc
#        cpp/Codeforces/401-450/439A_Devu_Churu.cc
#        cpp/Codeforces/401-450/439B_Devu_the_Dumb_Guy.cc
#        cpp/Codeforces/401-450/441A_Valera_and_Antique_Items.cc
#        cpp/Codeforces/401-450/443A_Anton_and_Letters.cc
#        cpp/Codeforces/401-450/447A_DZY_Loves_Hash.cc
#        cpp/Codeforces/401-450/448A_Rewards.cc
#        cpp/Codeforces/401-450/450A_Jzzhu_and_Children.cc
#        cpp/Codeforces/401-450/Makefile
#        cpp/Codeforces/401-450/stdin
#        cpp/Codeforces/451-500/bin/489C_Given_Length_and_Sum_of_Digits.dSYM/Contents/Resources/DWARF/489C_Given_Length_and_Sum_of_Digits
#        cpp/Codeforces/451-500/bin/489C_Given_Length_and_Sum_of_Digits.dSYM/Contents/Info.plist
#        cpp/Codeforces/451-500/bin/489C_Given_Length_and_Sum_of_Digits
#        cpp/Codeforces/451-500/451A_Game_With_Sticks.cc
#        cpp/Codeforces/451-500/451B_Sort_the_Array.cc
#        cpp/Codeforces/451-500/454A_Little_Pony.cc
#        cpp/Codeforces/451-500/455A_Boredom.cc
#        cpp/Codeforces/451-500/456A_Laptops.cc
#        cpp/Codeforces/451-500/456B_Fedya_and_Maths.cc
#        cpp/Codeforces/451-500/459A_Pashmak_and_Garden.cc
#        cpp/Codeforces/451-500/459B_Pashmak_and_Flowers.cc
#        cpp/Codeforces/451-500/460A_Vasya_and_Socks.cc
#        cpp/Codeforces/451-500/460B_Little_Dima_and_Equation.cc
#        cpp/Codeforces/451-500/461A_Appleman_and_Toastman.cc
#        cpp/Codeforces/451-500/462A_Appleman_and_Easy_Task.cc
#        cpp/Codeforces/451-500/462B_Appleman_and_Card_Game.cc
#        cpp/Codeforces/451-500/463A_Caisa_and_Sugar.cc
#        cpp/Codeforces/451-500/463B_Caisa_and_Pylons.cc
#        cpp/Codeforces/451-500/465A_inc_ARG.cc
#        cpp/Codeforces/451-500/465B_Inbox.cc
#        cpp/Codeforces/451-500/466A_Cheap_Travel.cc
#        cpp/Codeforces/451-500/467A_George_and_Accommodation.cc
#        cpp/Codeforces/451-500/467B_Fedor_and_New_Game.cc
#        cpp/Codeforces/451-500/469A_I_Wanna_Be_the_Guy.cc
#        cpp/Codeforces/451-500/471A_MUH_and_Sticks.cc
#        cpp/Codeforces/451-500/472A_Learn_from_Math.cc
#        cpp/Codeforces/451-500/472B_Design_Tutorial.cc
#        cpp/Codeforces/451-500/472C_Design_Tutorial.cc
#        cpp/Codeforces/451-500/474A_Keyboard.cc
#        cpp/Codeforces/451-500/474B_Worms.cc
#        cpp/Codeforces/451-500/476A_Dreamoon_and_Stairs.cc
#        cpp/Codeforces/451-500/478A_Initial_Bet.cc
#        cpp/Codeforces/451-500/478B_Random_Teams.cc
#        cpp/Codeforces/451-500/479A_Expression.cc
#        cpp/Codeforces/451-500/479C_Exams.cc
#        cpp/Codeforces/451-500/482A_Diverse_Permutation.cc
#        cpp/Codeforces/451-500/483A_Counterexample.cc
#        cpp/Codeforces/451-500/486A_Calculating_Function.cc
#        cpp/Codeforces/451-500/489A_SwapSort.cc
#        cpp/Codeforces/451-500/489B_BerSU_Ball.cc
#        cpp/Codeforces/451-500/489C_Given_Length_and_Sum_of_Digits.cc
#        cpp/Codeforces/451-500/490A_Team_Olympiad.cc
#        cpp/Codeforces/451-500/492A_Vanya_and_Cubes.cc
#        cpp/Codeforces/451-500/492B_Vanya_and_Lanterns.cc
#        cpp/Codeforces/451-500/495A_Digital_Counter.cc
#        cpp/Codeforces/451-500/496A_Minimum_Difficulty.cc
#        cpp/Codeforces/451-500/499A_Watching_a_movie.cc
#        cpp/Codeforces/451-500/499B_Lecture.cc
#        cpp/Codeforces/451-500/500A_New_Year_Transportation.cc
#        cpp/Codeforces/451-500/Makefile
#        cpp/Codeforces/451-500/stdin
#        cpp/Codeforces/501-550/bin/514A_Chewbacca_and_Number.dSYM/Contents/Resources/DWARF/514A_Chewbacca_and_Number
#        cpp/Codeforces/501-550/bin/514A_Chewbacca_and_Number.dSYM/Contents/Info.plist
#        cpp/Codeforces/501-550/bin/515A_Drazil_and_Date.dSYM/Contents/Resources/DWARF/515A_Drazil_and_Date
#        cpp/Codeforces/501-550/bin/515A_Drazil_and_Date.dSYM/Contents/Info.plist
#        cpp/Codeforces/501-550/bin/519A_A_and_B_and_Chess.dSYM/Contents/Resources/DWARF/519A_A_and_B_and_Chess
#        cpp/Codeforces/501-550/bin/519A_A_and_B_and_Chess.dSYM/Contents/Info.plist
#        cpp/Codeforces/501-550/bin/519B_A_and_B_and_Compilation_Errors.dSYM/Contents/Resources/DWARF/519B_A_and_B_and_Compilation_Errors
#        cpp/Codeforces/501-550/bin/519B_A_and_B_and_Compilation_Errors.dSYM/Contents/Info.plist
#        cpp/Codeforces/501-550/bin/520B_Two_Buttons.dSYM/Contents/Resources/DWARF/520B_Two_Buttons
#        cpp/Codeforces/501-550/bin/520B_Two_Buttons.dSYM/Contents/Info.plist
#        cpp/Codeforces/501-550/bin/527A_Playing_with_Paper.dSYM/Contents/Resources/DWARF/527A_Playing_with_Paper
#        cpp/Codeforces/501-550/bin/527A_Playing_with_Paper.dSYM/Contents/Info.plist
#        cpp/Codeforces/501-550/bin/550A_Two_Substrings.dSYM/Contents/Resources/DWARF/550A_Two_Substrings
#        cpp/Codeforces/501-550/bin/550A_Two_Substrings.dSYM/Contents/Info.plist
#        cpp/Codeforces/501-550/bin/509A_Maximum_in_Table
#        cpp/Codeforces/501-550/bin/510A_Fox_And_Snake
#        cpp/Codeforces/501-550/bin/514A_Chewbacca_and_Number
#        cpp/Codeforces/501-550/bin/515A_Drazil_and_Date
#        cpp/Codeforces/501-550/bin/519A_A_and_B_and_Chess
#        cpp/Codeforces/501-550/bin/519B_A_and_B_and_Compilation_Errors
#        cpp/Codeforces/501-550/bin/520A_Pangram
#        cpp/Codeforces/501-550/bin/520B_Two_Buttons
#        cpp/Codeforces/501-550/bin/527A_Playing_with_Paper
#        cpp/Codeforces/501-550/bin/540A_Combination_Lock
#        cpp/Codeforces/501-550/bin/546A_Soldier_and_Bananas
#        cpp/Codeforces/501-550/bin/550A_Two_Substrings
#        cpp/Codeforces/501-550/1
#        cpp/Codeforces/501-550/501A_Contest.cc
#        cpp/Codeforces/501-550/501B_Misha_and_Changing_Handles.cc
#        cpp/Codeforces/501-550/505A_Kitayuta_Gift.cc
#        cpp/Codeforces/501-550/505C_Kitayuta_Treasure.cc
#        cpp/Codeforces/501-550/507A_Amr_and_Music.cc
#        cpp/Codeforces/501-550/507B_Amr_and_Pins.cc
#        cpp/Codeforces/501-550/507C_Guess_Your_Way_Out.cc
#        cpp/Codeforces/501-550/507D_The_Maths_Lecture.cc
#        cpp/Codeforces/501-550/507E_Breaking_Good.cc
#        cpp/Codeforces/501-550/508A_Pasha_and_Pixels.cc
#        cpp/Codeforces/501-550/508B_Anton_and_Currency.cc
#        cpp/Codeforces/501-550/509A_Maximum_in_Table.cc
#        cpp/Codeforces/501-550/510A_Fox_And_Snake.cc
#        cpp/Codeforces/501-550/513A_Game.cc
#        cpp/Codeforces/501-550/514A_Chewbacca_and_Number.cc
#        cpp/Codeforces/501-550/515A_Drazil_and_Date.cc
#        cpp/Codeforces/501-550/519A_A_and_B_and_Chess.cc
#        cpp/Codeforces/501-550/519B_A_and_B_and_Compilation_Errors.cc
#        cpp/Codeforces/501-550/520A_Pangram.cc
#        cpp/Codeforces/501-550/520B_Two_Buttons.cc
#        cpp/Codeforces/501-550/527A_Playing_with_Paper.cc
#        cpp/Codeforces/501-550/540A_Combination_Lock.cc
#        cpp/Codeforces/501-550/546A_Soldier_and_Bananas.cc
#        cpp/Codeforces/501-550/550A_Two_Substrings.cc
#        cpp/Codeforces/501-550/Makefile
#        cpp/Codeforces/501-550/stdin
#        cpp/Codeforces/51-100/58A_Chat_room.cc
#        cpp/Codeforces/51-100/59A_Word.cc
#        cpp/Codeforces/51-100/61A_Ultra-Fast_Mathematician.cc
#        cpp/Codeforces/51-100/69A_Young_Physicist.cc
#        cpp/Codeforces/51-100/71A_Way_Too_Long_Words.cc
#        cpp/Codeforces/51-100/82A_Double_Cola.cc
#        cpp/Codeforces/51-100/84A_Toy_Army.cc
#        cpp/Codeforces/51-100/92A_Chips.cc
#        cpp/Codeforces/51-100/96A_Football.cc
#        cpp/Codeforces/51-100/Makefile
#        cpp/Codeforces/51-100/stdin
#        cpp/Codeforces/551-600/bin/551A_GukiZ_and_Contest.dSYM/Contents/Resources/DWARF/551A_GukiZ_and_Contest
#        cpp/Codeforces/551-600/bin/551A_GukiZ_and_Contest.dSYM/Contents/Info.plist
#        cpp/Codeforces/551-600/bin/556A_Case_of_Zeroes_and_Ones.dSYM/Contents/Resources/DWARF/556A_Case_of_Zeroes_and_Ones
#        cpp/Codeforces/551-600/bin/556A_Case_of_Zeroes_and_Ones.dSYM/Contents/Info.plist
#        cpp/Codeforces/551-600/bin/560A_Currency_System_in_Geraldion.dSYM/Contents/Resources/DWARF/560A_Currency_System_in_Geraldion
#        cpp/Codeforces/551-600/bin/560A_Currency_System_in_Geraldion.dSYM/Contents/Info.plist
#        cpp/Codeforces/551-600/bin/570A_Elections.dSYM/Contents/Resources/DWARF/570A_Elections
#        cpp/Codeforces/551-600/bin/570A_Elections.dSYM/Contents/Info.plist
#        cpp/Codeforces/551-600/bin/577A_Multiplication_Table.dSYM/Contents/Resources/DWARF/577A_Multiplication_Table
#        cpp/Codeforces/551-600/bin/577A_Multiplication_Table.dSYM/Contents/Info.plist
#        cpp/Codeforces/551-600/bin/579A_Raising_Bacteria.dSYM/Contents/Resources/DWARF/579A_Raising_Bacteria
#        cpp/Codeforces/551-600/bin/579A_Raising_Bacteria.dSYM/Contents/Info.plist
#        cpp/Codeforces/551-600/bin/588A_Duff_and_Meat.dSYM/Contents/Resources/DWARF/588A_Duff_and_Meat
#        cpp/Codeforces/551-600/bin/588A_Duff_and_Meat.dSYM/Contents/Info.plist
#        cpp/Codeforces/551-600/bin/599A_Patrick_and_Shopping.dSYM/Contents/Resources/DWARF/599A_Patrick_and_Shopping
#        cpp/Codeforces/551-600/bin/599A_Patrick_and_Shopping.dSYM/Contents/Info.plist
#        cpp/Codeforces/551-600/bin/551A_GukiZ_and_Contest
#        cpp/Codeforces/551-600/bin/556A_Case_of_Zeroes_and_Ones
#        cpp/Codeforces/551-600/bin/560A_Currency_System_in_Geraldion
#        cpp/Codeforces/551-600/bin/567A_Lineland_Mail
#        cpp/Codeforces/551-600/bin/570A_Elections
#        cpp/Codeforces/551-600/bin/577A_Multiplication_Table
#        cpp/Codeforces/551-600/bin/579A_Raising_Bacteria
#        cpp/Codeforces/551-600/bin/580A_Kefa_and_First_Steps
#        cpp/Codeforces/551-600/bin/581A_Vasya_the_Hipster
#        cpp/Codeforces/551-600/bin/584A_Olesya_and_Rodion
#        cpp/Codeforces/551-600/bin/588A_Duff_and_Meat
#        cpp/Codeforces/551-600/bin/599A_Patrick_and_Shopping
#        cpp/Codeforces/551-600/551A_GukiZ_and_Contest.cc
#        cpp/Codeforces/551-600/556A_Case_of_Zeroes_and_Ones.cc
#        cpp/Codeforces/551-600/560A_Currency_System_in_Geraldion.cc
#        cpp/Codeforces/551-600/567A_Lineland_Mail.cc
#        cpp/Codeforces/551-600/570A_Elections.cc
#        cpp/Codeforces/551-600/577A_Multiplication_Table.cc
#        cpp/Codeforces/551-600/579A_Raising_Bacteria.cc
#        cpp/Codeforces/551-600/580A_Kefa_and_First_Steps.cc
#        cpp/Codeforces/551-600/581A_Vasya_the_Hipster.cc
#        cpp/Codeforces/551-600/584A_Olesya_and_Rodion.cc
#        cpp/Codeforces/551-600/588A_Duff_and_Meat.cc
#        cpp/Codeforces/551-600/599A_Patrick_and_Shopping.cc
#        cpp/Codeforces/551-600/Makefile
#        cpp/Codeforces/551-600/stdin
#        cpp/Codeforces/601-650/bin/615A_Bulbs.dSYM/Contents/Resources/DWARF/615A_Bulbs
#        cpp/Codeforces/601-650/bin/615A_Bulbs.dSYM/Contents/Info.plist
#        cpp/Codeforces/601-650/bin/621A_Wet_Shark.dSYM/Contents/Resources/DWARF/621A_Wet_Shark
#        cpp/Codeforces/601-650/bin/621A_Wet_Shark.dSYM/Contents/Info.plist
#        cpp/Codeforces/601-650/bin/630A_Again_Twenty_Five.dSYM/Contents/Resources/DWARF/630A_Again_Twenty_Five
#        cpp/Codeforces/601-650/bin/630A_Again_Twenty_Five.dSYM/Contents/Info.plist
#        cpp/Codeforces/601-650/bin/615A_Bulbs
#        cpp/Codeforces/601-650/bin/617A_Elephant
#        cpp/Codeforces/601-650/bin/621A_Wet_Shark
#        cpp/Codeforces/601-650/bin/630A_Again_Twenty_Five
#        cpp/Codeforces/601-650/615A_Bulbs.cc
#        cpp/Codeforces/601-650/617A_Elephant.cc
#        cpp/Codeforces/601-650/621A_Wet_Shark.cc
#        cpp/Codeforces/601-650/630A_Again_Twenty_Five.cc
#        cpp/Codeforces/601-650/Makefile
#        cpp/Codeforces/601-650/stdin
#        cpp/Codeforces/651-700/bin/659A_Round_House.dSYM/Contents/Resources/DWARF/659A_Round_House
#        cpp/Codeforces/651-700/bin/659A_Round_House.dSYM/Contents/Info.plist
#        cpp/Codeforces/651-700/bin/677A_Vanya_and_Fence.dSYM/Contents/Resources/DWARF/677A_Vanya_and_Fence
#        cpp/Codeforces/651-700/bin/677A_Vanya_and_Fence.dSYM/Contents/Info.plist
#        cpp/Codeforces/651-700/bin/686A_Free_Ice_Cream.dSYM/Contents/Resources/DWARF/686A_Free_Ice_Cream
#        cpp/Codeforces/651-700/bin/686A_Free_Ice_Cream.dSYM/Contents/Info.plist
#        cpp/Codeforces/651-700/bin/688B_Lovely_Palindromes.dSYM/Contents/Resources/DWARF/688B_Lovely_Palindromes
#        cpp/Codeforces/651-700/bin/688B_Lovely_Palindromes.dSYM/Contents/Info.plist
#        cpp/Codeforces/651-700/bin/659A_Round_House
#        cpp/Codeforces/651-700/bin/677A_Vanya_and_Fence
#        cpp/Codeforces/651-700/bin/686A_Free_Ice_Cream
#        cpp/Codeforces/651-700/bin/688B_Lovely_Palindromes
#        cpp/Codeforces/651-700/651A_Joysticks.cc
#        cpp/Codeforces/651-700/659A_Round_House.cc
#        cpp/Codeforces/651-700/677A_Vanya_and_Fence.cc
#        cpp/Codeforces/651-700/686A_Free_Ice_Cream.cc
#        cpp/Codeforces/651-700/688B_Lovely_Palindromes.cc
#        cpp/Codeforces/651-700/Makefile
#        cpp/Codeforces/651-700/stdin
#        cpp/Codeforces/701-750/bin/701A_Cards.dSYM/Contents/Resources/DWARF/701A_Cards
#        cpp/Codeforces/701-750/bin/701A_Cards.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/703A_Mishka_and_Game.dSYM/Contents/Resources/DWARF/703A_Mishka_and_Game
#        cpp/Codeforces/701-750/bin/703A_Mishka_and_Game.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/705_Hulk.dSYM/Contents/Resources/DWARF/705_Hulk
#        cpp/Codeforces/701-750/bin/705_Hulk.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/706B_Interesting_Drink.dSYM/Contents/Resources/DWARF/706B_Interesting_Drink
#        cpp/Codeforces/701-750/bin/706B_Interesting_Drink.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/707A_Brain_Photos.dSYM/Contents/Resources/DWARF/707A_Brain_Photos
#        cpp/Codeforces/701-750/bin/707A_Brain_Photos.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/711A_Bus_to_Udayland.dSYM/Contents/Resources/DWARF/711A_Bus_to_Udayland
#        cpp/Codeforces/701-750/bin/711A_Bus_to_Udayland.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/716A_Crazy_Computer.dSYM/Contents/Resources/DWARF/716A_Crazy_Computer
#        cpp/Codeforces/701-750/bin/716A_Crazy_Computer.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/719A_Vitya_In_The_Countryside.dSYM/Contents/Resources/DWARF/719A_Vitya_In_The_Countryside
#        cpp/Codeforces/701-750/bin/719A_Vitya_In_The_Countryside.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/721A_Japanese_Crosswords.dSYM/Contents/Resources/DWARF/721A_Japanese_Crosswords
#        cpp/Codeforces/701-750/bin/721A_Japanese_Crosswords.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/723A_The_New_Year_Meeting_Friends.dSYM/Contents/Resources/DWARF/723A_The_New_Year_Meeting_Friends
#        cpp/Codeforces/701-750/bin/723A_The_New_Year_Meeting_Friends.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/731A_Night_at_the_Museum.dSYM/Contents/Resources/DWARF/731A_Night_at_the_Museum
#        cpp/Codeforces/701-750/bin/731A_Night_at_the_Museum.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/732A_Buy_A_Shovel.dSYM/Contents/Resources/DWARF/732A_Buy_A_Shovel
#        cpp/Codeforces/701-750/bin/732A_Buy_A_Shovel.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/733A_Grasshopper_and_the_Strings.dSYM/Contents/Resources/DWARF/733A_Grasshopper_and_the_Strings
#        cpp/Codeforces/701-750/bin/733A_Grasshopper_and_the_Strings.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/734A_Anton_And_Danik.dSYM/Contents/Resources/DWARF/734A_Anton_And_Danik
#        cpp/Codeforces/701-750/bin/734A_Anton_And_Danik.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/734B_Anton_and_Digits.dSYM/Contents/Resources/DWARF/734B_Anton_and_Digits
#        cpp/Codeforces/701-750/bin/734B_Anton_and_Digits.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/742A_Arpa_Mehrdad.dSYM/Contents/Resources/DWARF/742A_Arpa_Mehrdad
#        cpp/Codeforces/701-750/bin/742A_Arpa_Mehrdad.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/749A_Bachgold_Problem.dSYM/Contents/Resources/DWARF/749A_Bachgold_Problem
#        cpp/Codeforces/701-750/bin/749A_Bachgold_Problem.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/750A_New_Year_and_Hurry.dSYM/Contents/Resources/DWARF/750A_New_Year_and_Hurry
#        cpp/Codeforces/701-750/bin/750A_New_Year_and_Hurry.dSYM/Contents/Info.plist
#        cpp/Codeforces/701-750/bin/701A_Cards
#        cpp/Codeforces/701-750/bin/703A_Mishka_and_Game
#        cpp/Codeforces/701-750/bin/705_Hulk
#        cpp/Codeforces/701-750/bin/706B_Interesting_Drink
#        cpp/Codeforces/701-750/bin/707A_Brain_Photos
#        cpp/Codeforces/701-750/bin/711A_Bus_to_Udayland
#        cpp/Codeforces/701-750/bin/716A_Crazy_Computer
#        cpp/Codeforces/701-750/bin/719A_Vitya_In_The_Countryside
#        cpp/Codeforces/701-750/bin/721A_Japanese_Crosswords
#        cpp/Codeforces/701-750/bin/723A_The_New_Year_Meeting_Friends
#        cpp/Codeforces/701-750/bin/731A_Night_at_the_Museum
#        cpp/Codeforces/701-750/bin/732A_Buy_A_Shovel
#        cpp/Codeforces/701-750/bin/733A_Grasshopper_and_the_Strings
#        cpp/Codeforces/701-750/bin/734A_Anton_And_Danik
#        cpp/Codeforces/701-750/bin/734B_Anton_and_Digits
#        cpp/Codeforces/701-750/bin/742A_Arpa_Mehrdad
#        cpp/Codeforces/701-750/bin/749A_Bachgold_Problem
#        cpp/Codeforces/701-750/bin/750A_New_Year_and_Hurry
#        cpp/Codeforces/701-750/701A_Cards.cc
#        cpp/Codeforces/701-750/703A_Mishka_and_Game.cc
#        cpp/Codeforces/701-750/705_Hulk.cc
#        cpp/Codeforces/701-750/706B_Interesting_Drink.cc
#        cpp/Codeforces/701-750/707A_Brain_Photos.cc
#        cpp/Codeforces/701-750/711A_Bus_to_Udayland.cc
#        cpp/Codeforces/701-750/716A_Crazy_Computer.cc
#        cpp/Codeforces/701-750/719A_Vitya_In_The_Countryside.cc
#        cpp/Codeforces/701-750/721A_Japanese_Crosswords.cc
#        cpp/Codeforces/701-750/723A_The_New_Year_Meeting_Friends.cc
#        cpp/Codeforces/701-750/731A_Night_at_the_Museum.cc
#        cpp/Codeforces/701-750/732A_Buy_A_Shovel.cc
#        cpp/Codeforces/701-750/733A_Grasshopper_and_the_Strings.cc
#        cpp/Codeforces/701-750/734A_Anton_And_Danik.cc
#        cpp/Codeforces/701-750/734B_Anton_and_Digits.cc
#        cpp/Codeforces/701-750/742A_Arpa_Mehrdad.cc
#        cpp/Codeforces/701-750/749A_Bachgold_Problem.cc
#        cpp/Codeforces/701-750/750A_New_Year_and_Hurry.cc
#        cpp/Codeforces/701-750/Makefile
#        cpp/Codeforces/701-750/stdin
#        cpp/Codeforces/751-800/bin/758A_Holiday_Of_Equality.dSYM/Contents/Resources/DWARF/758A_Holiday_Of_Equality
#        cpp/Codeforces/751-800/bin/758A_Holiday_Of_Equality.dSYM/Contents/Info.plist
#        cpp/Codeforces/751-800/bin/785A_Anton_and_Polyhedrons.dSYM/Contents/Resources/DWARF/785A_Anton_and_Polyhedrons
#        cpp/Codeforces/751-800/bin/785A_Anton_and_Polyhedrons.dSYM/Contents/Info.plist
#        cpp/Codeforces/751-800/bin/791A_Bear_and_Big_Brother.dSYM/Contents/Resources/DWARF/791A_Bear_and_Big_Brother
#        cpp/Codeforces/751-800/bin/791A_Bear_and_Big_Brother.dSYM/Contents/Info.plist
#        cpp/Codeforces/751-800/bin/758A_Holiday_Of_Equality
#        cpp/Codeforces/751-800/bin/785A_Anton_and_Polyhedrons
#        cpp/Codeforces/751-800/bin/791A_Bear_and_Big_Brother
#        cpp/Codeforces/751-800/758A_Holiday_Of_Equality.cc
#        cpp/Codeforces/751-800/785A_Anton_and_Polyhedrons.cc
#        cpp/Codeforces/751-800/791A_Bear_and_Big_Brother.cc
#        cpp/Codeforces/751-800/Makefile
#        cpp/Codeforces/751-800/stdin
#        cpp/Codeforces/801-850/bin/822A_Im_Bored_With_Life.dSYM/Contents/Resources/DWARF/822A_Im_Bored_With_Life
#        cpp/Codeforces/801-850/bin/822A_Im_Bored_With_Life.dSYM/Contents/Info.plist
#        cpp/Codeforces/801-850/bin/832A_Sasha_and_Sticks.dSYM/Contents/Resources/DWARF/832A_Sasha_and_Sticks
#        cpp/Codeforces/801-850/bin/832A_Sasha_and_Sticks.dSYM/Contents/Info.plist
#        cpp/Codeforces/801-850/bin/822A_Im_Bored_With_Life
#        cpp/Codeforces/801-850/bin/832A_Sasha_and_Sticks
#        cpp/Codeforces/801-850/822A_Im_Bored_With_Life.cc
#        cpp/Codeforces/801-850/832A_Sasha_and_Sticks.cc
#        cpp/Codeforces/801-850/Makefile
#        cpp/Codeforces/801-850/stdin
#        cpp/Codeforces/901-950/bin/908A_New_Year_and_Couting_Cards.dSYM/Contents/Resources/DWARF/908A_New_Year_and_Couting_Cards
#        cpp/Codeforces/901-950/bin/908A_New_Year_and_Couting_Cards.dSYM/Contents/Info.plist
#        cpp/Codeforces/901-950/bin/913A_Modular_Exponentiation.dSYM/Contents/Resources/DWARF/913A_Modular_Exponentiation
#        cpp/Codeforces/901-950/bin/913A_Modular_Exponentiation.dSYM/Contents/Info.plist
#        cpp/Codeforces/901-950/bin/908A_New_Year_and_Couting_Cards
#        cpp/Codeforces/901-950/bin/913A_Modular_Exponentiation
#        cpp/Codeforces/901-950/908A_New_Year_and_Couting_Cards.cc
#        cpp/Codeforces/901-950/913A_Modular_Exponentiation.cc
#        cpp/Codeforces/901-950/Makefile
#        cpp/Codeforces/901-950/stdin
#        cpp/Codeforces/contests/Makefile
#        cpp/Codeforces/contests/stdin
#        cpp/Codeforces/contests/template.cc
#        cpp/Codeforces/A.problem
#        cpp/Codeforces/Codeforces.iml
#        cpp/Codeforces/Makefile
#        cpp/Codeforces/template.cc
#        cpp/Samples/Algorithms_4th_Edition/'
#        cpp/Samples/Algorithms_4th_Edition/1.3.1.cpp
#        cpp/Samples/Algorithms_4th_Edition/1.3.6.cpp
#        cpp/Samples/Algorithms_4th_Edition/FixedCapacityStackOfStrings.cpp
#        cpp/Samples/Algorithms_4th_Edition/FixedCapacityStackOfStrings.h
#        cpp/Samples/Algorithms_4th_Edition/FixedCapacityStackOfStrings.o
#        cpp/Samples/Algorithms_4th_Edition/FixedCapacityStackOfStringsTest
#        cpp/Samples/Algorithms_4th_Edition/FixedCapacityStackOfStringsTest.cpp
#        cpp/Samples/Algorithms_4th_Edition/FixedCapacityStackOfStringsTest.o
#        cpp/Samples/Algorithms_4th_Edition/Makefile
#        cpp/Samples/bin/memcpy
#        cpp/Samples/BinarySearchTree
#        cpp/Samples/BinarySearchTree.c
#        cpp/Samples/DivideCoins.java
#        cpp/Samples/FindMissingNumber
#        cpp/Samples/FindMissingNumber.c
#        cpp/Samples/ins
#        cpp/Samples/ins.c
#        cpp/Samples/memcpy.c
#        cpp/Samples/TryGetOpt
#        cpp/Samples/TryGetOpt.cc
#        out/production/CP_Contests_Solutions/CF_977A_WrongSubtraction\$InputReader.class
#        out/production/CP_Contests_Solutions/CF_977A_WrongSubtraction\$Task.class
#        out/production/CP_Contests_Solutions/CF_977A_WrongSubtraction.class
#        src/Codeforces/CF_951_1000/CF_977A_WrongSubtraction.java
#        README.md
#        TODO.md )

add_executable(TwitterCodingChallengeCollege_2019 cpp/HackerRank/TwitterCodingChallengeCollege_2019.cpp)
